kyverno-automation/resources/required-label/pod-missing-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-team
spec:
  containers:
  - name: nginx
    image: nginx:alpine
