kyverno-automation/resources/required-label/pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-team
  labels:
    team: dev
spec:
  containers:
  - name: nginx
    image: nginx:alpine
