kyverno-automation/tests/required-label/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-labels
policies:
  - ../../policies/clusterpolicies/require-labels-clusterpolicy.yaml
resources:
  - ../../resources/required-label/pod-missing-label.yaml
  - ../../resources/required-label/pod-with-label.yaml
results:
  - policy: require-labels
    rule: check-team
    resources: 
    - default/pod-with-team
    kind: Pod
    result: pass
  - policy: require-labels
    rule: check-team
    resources: 
    - default/pod-no-team
    kind: Pod
    result: fail
